--- a/memos/index.html
+++ b/memos/index.html
@@ -136,14 +136,7 @@
         </div>
 
 
-        <div class="footer">
-            <div class="pull-right">
-                10GB of <strong>250GB</strong> Free.
-            </div>
-            <div>
-                <strong>Copyright</strong> Example Company &copy; 2014-2017
-            </div>
-        </div>
+        <div class="footer"><div><strong>Copyright</strong> TC.com</div></div>
 
     </div>
 </div>
