--- a/memos/submit.html
+++ b/memos/submit.html
@@ -27,7 +27,7 @@
 
     <div id="" class="container gray-bg" style="position: relative !important;">
 
-          <div class="row" style="padding-top: 20px">
+        <div class="row" style="padding-top: 20px">
               <div class="col-lg-12">
                   <div class="ibox white-bg float-e-margins" style="margin: 0 10px">
                       <div class="">
@@ -35,11 +35,11 @@
                               <div class="col-md-8">
                                   <div class="text-center p-md">
 
-                                      <h2 style="margin-top: 8px"><span class="text-navy">We've found your Great Photos!</span>
+                                      <h2 style="margin-top: 8px"><span class="text-navy">We've found your Great Photos</span>,
                                           Analyzed and automatically categorized them to appropriate folders</h2>
 
                                       <p>
-                                          <a href="#"><i class="fa fa-warning"></i> </a>
+                                          <a href="#"><i class="fa fa-image"></i> </a>
                                           Note, that we'll take only 1 photo from every group
                                       </p>
 
@@ -83,7 +83,7 @@
                                 <h6>View, Terrace, Balcony</h6>
                                 <p class="small"><i class="fa fa-hand-o-up"></i> Drag Photo to another category</p>
                                 <ul class="sortable-list connectList agile-list ui-sortable" id="todo">
-                                    <li class="info-element ui-sortable-handle" id="task1" style="">
+                                    <li class="info-element ui-sortable-handle first">
                                         <img src="photos/3-1.jpg" width="168px" height="115px">
                                         <div class="agile-detail">
                                             <a href="#" class="pull-right btn btn-xs btn-white">Delete</a>
@@ -122,7 +122,7 @@
                                 <h6>Fitness, Activities</h6>
                                 <p class="small"><i class="fa fa-hand-o-up"></i> Drag Photo to another category</p>
                                 <ul class="sortable-list connectList agile-list ui-sortable" id="todo">
-                                    <li class="info-element ui-sortable-handle" id="task1" style="">
+                                    <li class="info-element ui-sortable-handle first">
                                         <img src="photos/3-2.jpg" width="168px" height="115px">
                                         <div class="agile-detail">
                                             <a href="#" class="pull-right btn btn-xs btn-white">Delete</a>
@@ -151,7 +151,7 @@
                                 <h6>Beach, Garden, Hiking</h6>
                                 <p class="small"><i class="fa fa-hand-o-up"></i> Drag Photo to another category</p>
                                 <ul class="sortable-list connectList agile-list ui-sortable" id="todo">
-                                    <li class="warning-element ui-sortable-handle" id="task1" style="">
+                                    <li class="info-element ui-sortable-handle first">
                                         <img src="photos/2-3.jpg" width="168px" height="115px">
                                         <div class="agile-detail">
                                             <a href="#" class="pull-right btn btn-xs btn-white">Delete</a>
@@ -180,7 +180,7 @@
                                 <h6>Bar, Restaurant, Breakfast</h6>
                                 <p class="small"><i class="fa fa-hand-o-up"></i> Drag Photo to another category</p>
                                 <ul class="sortable-list connectList agile-list ui-sortable" id="todo">
-                                    <li class="warning-element ui-sortable-handle" id="task1" style="">
+                                    <li class="info-element ui-sortable-handle first">
                                         <img src="photos/2-4.jpg" width="168px" height="115px">
                                         <div class="agile-detail">
                                             <a href="#" class="pull-right btn btn-xs btn-white">Delete</a>
@@ -197,15 +197,25 @@
             </div>
         </div>
 
-&nbsp;
-        <div class="footer">
-            <div class="pull-right">
-                10GB of <strong>250GB</strong> Free.
-            </div>
-            <div>
-                <strong>Copyright</strong> Example Company &copy; 2014-2017
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="ibox" style="margin: 0 10px">
+                    <div class="ibox-content" style="min-height: 90px">
+
+                        <p class="pull-right" style="margin-bottom: 80px">
+                            <a href="" target="_blank" class="btn btn-warning btn-lg"
+                               style="background-color: #85c802;font-weight: 800; margin-right: 10px" type="button">
+                                Submit Your Review</a>
+                            <br/>
+                            <small class="">You'll be redirected to Review Page</small>
+                        </p>
+
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="footer"><div><strong>Copyright</strong> TC.com</div></div>
 
     </div>
 </div>
